# prolog-mcp-server

./: .gitignore  LICENSE  Prolog_MCP-server.py  Prolog_Server_start.py  README.md  pyproject.toml  requirements.txt  server.pl
docker/: prolog.dockerfile
examples/: demo_MCP-client_invoking_Prolog-MCP-server_stdio.py  demo_prolog_MCP-server-start_http.py
src/: __init__.py  pengine_server.pl  prolog_mcp_server.py  prolog_server_start.py  server.pl
src/prolog_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_prolog-server-start_without_MCP.py
