[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prolog-mcp-server"
version = "0.1.0"
description = "Model Context Protocol Server for SWI Prolog integration"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "docker>=6.0.0",
    "fastmcp>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/prolog-mcp-server"
Repository = "https://github.com/yourusername/prolog-mcp-server"
Issues = "https://github.com/yourusername/prolog-mcp-server/issues"

[project.scripts]
prolog-mcp-server = "prolog_mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pl"]